--- a/SampleClient/SampleClient.csproj
+++ b/SampleClient/SampleClient.csproj
@@ -61,18 +61,10 @@
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\MonoGameUi\MonoGameUi.csproj">
       <Project>{9E89B217-8424-4FCB-B365-3A01F61CD44F}</Project>
       <Name>MonoGameUi</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Content\BoldFont.spritefont" />
-    <None Include="Content\GameFont.spritefont" />
-    <None Include="Content\HeadlineFont.spritefont" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -82,4 +74,13 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <None Include="Content\BoldFont.fnt" />
+    <None Include="Content\BoldFont.png" />
+    <None Include="Content\Content.ecp" />
+    <None Include="Content\GameFont.fnt" />
+    <None Include="Content\GameFont.png" />
+    <None Include="Content\HeadlineFont.fnt" />
+    <None Include="Content\HeadlineFont.png" />
+  </ItemGroup>
 </Project>
